--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
   sha256: 026031c1df198756968c43ec39e1993e03533333bade8ed93f655ce6efa07a90
 
 build:
-  number: 0
+  number: 1
   # pytorch doesn't provide a windows build
   # pandas<1.4 is not available for Python 3.11
   skip: true  # [win or py==311]
@@ -30,7 +30,7 @@ requirements:
     - python
     - cython <=0.29.34
     - setuptools >=41.0.0
-    - numpy
+    - numpy >=1.18.5
     - scikit-learn >=0.22
   run:
     - python
@@ -51,9 +51,7 @@ requirements:
     - shap
     - dill
     - lightgbm
-    # https://github.com/conda-forge/pygam-feedstock/issues/12
-    # this pin is not in the requirements but should be
-    - pygam <0.9.0
+    - pygam
     - packaging
     - pytorch
     - pyro-ppl
